--- a/style.css
+++ b/style.css
@@ -2,19 +2,100 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Silkscreen', cursive;
 }
+
 body {
     background: green;
-}
-.container {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-}
-.fundo {
-    position: relative;
-    background-image: url(img/banner-minecraft.jpg);
+    background-image: url(../img/banner-minecraft.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
+    user-select: none;
+}
+
+main .wrapper {
+    flex-wrap: wrap;
+}
+
+a {
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    color: #fff;
+}
+
+button {
+    position: relative;
+    background: #18b561bf;
+    border: 1px solid black;
+    font-size: 1rem;
+    color: #fff;
+    width: 300px;
+    height: 50px;
+}
+
+button:hover {
+    background: #18b56198;
+}
+
+.coluna-geral {
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    display: flex;   
     width: 100%;
     height: 100vh;
+}
+
+.painel-login {
+    position: relative;
+    background: #333333;
+    border-radius: 4px;
+    width: 400px;
+    height: 375px;
+    padding: 48px;
+}
+
+.painel-login span {
+    font-size: 0.6rem;
+}
+
+.painel-login b {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.7rem;
+}
+
+.painel-login p {
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+    display: flex;
+    font-size: 0.7rem;
+}
+
+.painel-login h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.7rem;
+    font-weight: bold;
+    display: flex;
+}
+
+.input-form {
+    position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+    background: #121212;
+    border-radius: 4px;
+    color: #fff;
+    border: none;
+    width: 300px;
+    height: 25px;
+}
+
+.logo {
+    position: absolute;
+    top: -1.6rem;
 }
