--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     background: green;
-    background-image: url(../img/banner-minecraft.jpg);
+    background-image: url(../img/banner-minecraft.gif);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
