--- a/style.css
+++ b/style.css
@@ -25,10 +25,10 @@ a {
 }
 
 button {
-    position: relative;
-    background: #18b561bf;
     border: 1px solid black;
+    background: #18b561bf;
     font-size: 1rem;
+    cursor: pointer;
     color: #fff;
     width: 300px;
     height: 50px;
