--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 body {
     background: green;
     background-image: url(../img/banner-minecraft.gif);
-    background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     user-select: none;
@@ -18,18 +17,11 @@ main .wrapper {
     flex-wrap: wrap;
 }
 
-a {
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    color: #fff;
-}
-
 button {
     border: 1px solid black;
     background: #18b561bf;
     font-size: 1rem;
     cursor: pointer;
-    color: #fff;
     width: 300px;
     height: 50px;
 }
@@ -42,14 +34,13 @@ button:hover {
     position: relative;
     justify-content: center;
     align-items: center;
-    color: #fff;
     display: flex;   
     width: 100%;
     height: 100vh;
 }
 
 .painel-login {
-    position: relative;
+    position: absolute;
     background: #333333;
     border-radius: 4px;
     width: 400px;
@@ -61,35 +52,24 @@ button:hover {
     font-size: 0.6rem;
 }
 
-.painel-login b {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.7rem;
-}
-
 .painel-login p {
-    font-family: Arial, Helvetica, sans-serif;
-    justify-content: center;
-    align-items: center;
     font-weight: 500;
-    display: flex;
-    font-size: 0.7rem;
 }
 
 .painel-login h3 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+.painel-login h3, p {
     justify-content: center;
     align-items: center;
-    font-size: 0.7rem;
-    font-weight: bold;
     display: flex;
 }
 
 .input-form {
     position: relative;
-    font-family: Arial, Helvetica, sans-serif;
     background: #121212;
     border-radius: 4px;
-    color: #fff;
     border: none;
     width: 300px;
     height: 25px;
@@ -98,4 +78,14 @@ button:hover {
 .logo {
     position: absolute;
     top: -1.6rem;
+}
+
+.painel-login h3, p, b, a, .input-form {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.7rem;
+}
+
+.coluna-geral, a, button, .input-form {
+    text-decoration: none;
+    color: #fff;
 }
