--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,7 @@ button {
     background: #18b561bf;
     font-size: 1rem;
     cursor: pointer;
-    width: 300px;
-    height: 50px;
+    width: 300px; height: 50px;
 }
 
 button:hover {
@@ -35,25 +34,19 @@ button:hover {
     justify-content: center;
     align-items: center;
     display: flex;   
-    width: 100%;
-    height: 100vh;
+    width: 100%; height: 100vh;
 }
 
 .painel-login {
     position: absolute;
     background: #333333;
     border-radius: 4px;
-    width: 400px;
-    height: 375px;
+    width: 400px; height: 375px;
     padding: 48px;
 }
 
 .painel-login span {
     font-size: 0.6rem;
-}
-
-.painel-login p {
-    font-weight: 500;
 }
 
 .painel-login h3 {
@@ -69,10 +62,8 @@ button:hover {
 .input-form {
     position: relative;
     background: #121212;
-    border-radius: 4px;
-    border: none;
-    width: 300px;
-    height: 25px;
+    border-radius: 4px; border: none;
+    width: 300px; height: 25px;
 }
 
 .logo {
